# rain

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.ninja  main.cc  nova-fast.c  nova-os.c  nova-sync.c  nova-tid.c  nova.c  nova.h  nova.s
Fin/: CMakeLists.txt
Fin/Rain/: MachineConfig.h.in
Fin/Rain/Lang/: Maybe.h  Util.h
Fin/Rain/Math/: Integers.h
Fin/Rain/Mem/: Alloc.cc  Alloc.h
Fin/Rain/Sync/: Locks.h
Rain/: Compiler.h  Config.h  MachineConfig.h.in
Rain/Lang/: Maybe.h
Rain/Math/: Util.h
Rain/Mem/: Alloc.cc  Alloc.h
Rain/Sync/: Locks.h
prototype/: alg.txt  build.ninja  nova.c
